structure update - more semantic structure -  it has been ~3yrs since the last update to the code so the structure - was pretty terrible, had mains and sections everywhere :) - only planning on making a few changes to fix structure/styles and make - it a little more usable - the rest will be moved to stretch - biggest changes for this was removing the modal - since it was unnecessary, moving rules to the bottom as a - expandable info section, and making the cell grid into - a table where each cell is keyboard usable by adding buttons - formatting/styles/a11y wip

--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,17 @@ html, body, #root {
 	font-size: 62.5%;
 }
 
+.visually-hidden {
+	position: absolute;
+	clip: rect(0, 0, 0, 0);
+	height: 1px;
+	width: 1px;
+	margin: -1px;
+	padding: 0;
+	border: 0;
+	overflow: hidden;
+}
+
+.hidden {
+	display: none;
+}
